src/pj/poco/test/neg/NSTRUC14.POC
/* see what happens when you have char as a element name in a struct */
#pragma poco echo "expect>expecting name in declaration got 'char'"

struct foobar
	{
	int foo,char;
	int bar;
	} fb;

main()
{
int i = fb.foo;
char c = fb.bar;

puts("Shouldn't really compile");
}
